# nekoparser

./: .dockerignore  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  autoinstaller.sh  backend.Dockerfile  default.conf.sample  docker-compose.yml  frontend.Dockerfile  generate_secrets.sh  init.sql  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  sonar-project.properties
.github/workflows/: linter.yml  sonar.yaml
apps/: alembic.ini  prefect.yaml
apps/backend/: __main__.py  server.py
apps/backend/routes/api/v1/config/: routes.py
apps/backend/routes/api/v1/connector/: routes.py
apps/backend/routes/api/v1/ping/: routes.py
apps/backend/routes/api/v1/sources/: routes.py  source_manager.py
apps/frontend/: eslint.config.js  openapi-ts.config.ts  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.ts  tsconfig.json  vite.config.ts
apps/frontend/src/: app.css
apps/frontend/src/client/: schemas.gen.ts  services.gen.ts  types.gen.ts
apps/frontend/src/client/core/: CancelablePromise.ts  OpenAPI.ts  request.ts
apps/frontend/src/lib/: utils.ts
apps/frontend/src/lib/components/ui/alert/: index.ts
apps/frontend/src/lib/components/ui/alert-dialog/: alert-dialog-cancel.svelte  alert-dialog-overlay.svelte
apps/frontend/src/lib/components/ui/avatar/: avatar-fallback.svelte  avatar-image.svelte  avatar.svelte
apps/frontend/src/lib/components/ui/badge/: index.ts
apps/frontend/src/lib/components/ui/button/: index.ts
apps/frontend/src/lib/components/ui/card/: card-content.svelte  card-description.svelte  card-footer.svelte  card-header.svelte  card-title.svelte  card.svelte
apps/frontend/src/lib/components/ui/checkbox/: checkbox.svelte
apps/frontend/src/lib/components/ui/command/: command-dialog.svelte  command-empty.svelte  command-group.svelte  command-input.svelte  command-item.svelte  command-list.svelte  command-separator.svelte  command-shortcut.svelte  (+1 more)
apps/frontend/src/lib/custom/: back-btn.svelte  hotkey.svelte  hotkeys.svelte  status-tracker.svelte
apps/frontend/src/routes/: +layout.svelte  +page.server.ts  +page.svelte
apps/frontend/src/routes/(components)/: data-source.svelte  data-sources.svelte  index.ts  new-source-schema.ts  new-source.svelte  settings.svelte
apps/frontend/src/routes/sources/[slug]/: +page.js  +page.svelte
apps/frontend/tests/: test.ts
apps/frontend/web/: package.json  vite.config.ts
apps/frontend/web/src/: app.css
apps/frontend/web/src/routes/: +page.svelte
apps/frontend/web/src/routes/(components)/: data-table-column-header.svelte  data-table-faceted-filter.svelte  data-table-pagination.svelte  data-table-priority-cell.svelte  data-table-row-actions.svelte  data-table-status-cell.svelte  data-table-toolbar.svelte  data-table-view-options.svelte  data-table.svelte  user-nav.svelte
apps/transformations/: __main__.py  config.py  global_connector.py  serve.py  utils.py
apps/transformations/excel/: connector.py  pipeline.py
apps/transformations/excel/tasks/: __init__.py  enrich.py  initial_processing.py
apps/transformations/sample/: pipeline.py
apps/transformations/websites/: connector.py  pipeline.py
apps/transformations/websites/tasks/: __init__.py  extract_meta.py  scrape_website.py  scrape_websites.py  xpath_extraction.py
chrome-plugin/: README.md  inject.js  injected.js  manifest.json
data-samples/: README.md  output.csv  output.json
data-samples/input/html/: input.html
(+38 files in other folders)
