[tool.ruff]
line-length = 90
target-version = "py312"

[tool.ruff.lint]
extend-select = ["I"]

[tool.pyright]
standard = true
reportUnnecessaryTypeIgnoreComment = true
[tool.poetry]
name = "nekoparser"
version = "0.0.1"
description = "Generic HTML, XLSX and PDF parser for products"
authors = [
    "hikariatama <d.gazizullin@dan.tatar>",
    # TODO: Add other team members
]
license = "GNU AGPLv3"
readme = "README.md"
package-mode = false

[tool.ruff.lint.isort]
known-first-party = [
    "packages",
    "transformations",
    "backend",
]

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.8.2"
pydantic-settings = "^2.3.4"
psycopg2-binary = "^2.9.9"
sqlalchemy = "^2.0.31"
python-dotenv = "^1.0.1"
sentry-sdk = "^2.8.0"
structlog = "^24.2.0"
fastapi = "^0.111.0"
uvicorn = "0.30.1"
prefect = "^2.19.7"
aiohttp = "^3.9.5"
deep-translator = "^1.11.4"
lxml = "^5.2.2"
fake-useragent = "^1.5.1"

[tool.poetry.group.dev.dependencies]
pyright = "1.1.371"
ruff = "^0.5.1"
pre-commit = "^3.7.1"
lxml-stubs = "^0.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
